--- a/data/patches/buildprop_data.conf
+++ b/data/patches/buildprop_data.conf
@@ -1,8 +1,7 @@
-ro.product.model=IQ4515 QUAD
-ro.product.brand=FLY
-ro.product.name=Evo Energy 1
+ro.product.model=PULSAR
+ro.product.brand=EXPLAY
+ro.product.name=PULSAR
 ro.mediatek.platform=MT6582
 mediatek.wlan.chip=CONSYS_MT6582
 mediatek.wlan.module.postfix=_consys_mt6582
-ro.product.manufacturer=FLY
-ro.product.miuipro.device=evo_energy
+ro.product.manufacturer=EXPLAY
