--- a/data/settings/settings.conf
+++ b/data/settings/settings.conf
@@ -15,7 +15,7 @@
    "Smali": "smali-2.1.0-845fae21-dirty-small.jar",
    "AlternativeROMNaming": true,
    "RedownloadRepositories": true,
-   "ROMTypeString": "evo_energy",
+   "ROMTypeString": "pulsar",
    "ParserOriginalLocale": "Default",
    "ParserDeleteNotDefault": false,
    "SingleFileAutoPatch": false,
