--- a/data/settings/deletefiles.conf
+++ b/data/settings/deletefiles.conf
@@ -1,7 +1,4 @@
-system/app/MiuiCompass.apk
-system/lib/hw/gralloc.mt6592.so
-system/lib/hw/hwcomposer.mt6592.so
-system/xbin/libmnlp_mt6592
+system/etc/firmware
 system/etc/mddb
 system/media/audio/ui/camera_click.ogg
 file_contexts
