--- a/data/settings/alt_rom_name.conf
+++ b/data/settings/alt_rom_name.conf
@@ -1,1 +1,1 @@
-"miuipro_v"+ro.build.version.release+"_"pulsar"_"+ro.build.version.incremental+".zip"
+"miuipro_v"+ro.build.version.release+"_"example"_"+ro.build.version.incremental+".zip"
