--- a/data/settings/settings.conf
+++ b/data/settings/settings.conf
@@ -19,7 +19,7 @@
    "Smali": "smali-2.1.0-845fae21-dirty-small.jar",
    "AlternativeROMNaming": true,
    "RedownloadRepositories": true,
-   "ROMTypeString": "example",
+   "ROMTypeString": "evo_tech_4",
    "ParserOriginalLocale": "Default",
    "ParserDeleteNotDefault": false,
    "SingleFileAutoPatch": false,
