--- a/data/settings/repo.evo_tech_4.main.conf
+++ b/data/settings/repo.evo_tech_4.main.conf
@@ -1,1 +1,1 @@
-github::PortHunters/miui_v7_evo_tech_4_translate::=MIUIv7 Russian Translate
+github::mxsin/miui_v7_evo_tech_4_translate::=MIUIv7 Service Patches
