--- a/data/settings/alt_rom_name.conf
+++ b/data/settings/alt_rom_name.conf
@@ -1,1 +1,1 @@
-"miuipro_v"+ro.build.version.release+"_"evo_tech_4"_"+ro.build.version.incremental+".zip"
+"multirom_v"+ro.build.version.release+"_"iq4514_quad"_"+ro.build.version.incremental+".zip"
