--- a/data/settings/repo.evo_tech_4.extra.conf
+++ b/data/settings/repo.evo_tech_4.extra.conf
@@ -1,1 +1,1 @@
-github::mxsin/miui_v7_evo_tech_4_replace::=MIUIv7 MultiRom Replace Files
+github::mxsin/miui_v7_evo_tech_4_replace::=MIUIv7 MultiRom Replace Files (mARP)
